[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/arrow.png" type="Texture" id=1]
[ext_resource path="res://sprites/slash/slash2.png" type="Texture" id=2]
[ext_resource path="res://sprites/slash/slash3.png" type="Texture" id=3]
[ext_resource path="res://sprites/slash/slash5.png" type="Texture" id=4]
[ext_resource path="res://sprites/slash/slash4.png" type="Texture" id=5]
[ext_resource path="res://sprites/slash/slash1.png" type="Texture" id=6]
[ext_resource path="res://characters/abilities/Ability.tscn" type="PackedScene" id=7]
[ext_resource path="res://characters/abilities/Slash.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.6364, 18.4466 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "slash",
"speed": 10.0
} ]

[node name="Slash" instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="MeleeHitbox" type="Area2D" parent="." index="0"]
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox" index="0"]
position = Vector2( 32.5138, 0.729735 )
shape = SubResource( 1 )

[node name="Direction" type="Sprite" parent="MeleeHitbox" index="1"]
modulate = Color( 1, 1, 1, 0.290196 )
position = Vector2( 32.7032, 2.22976 )
rotation = 3.14159
scale = Vector2( 0.433445, 0.458487 )
texture = ExtResource( 1 )

[node name="SlashAnimation" type="AnimatedSprite" parent="MeleeHitbox" index="2"]
position = Vector2( 11.5483, -4.68223 )
scale = Vector2( 0.212968, 0.162902 )
frames = SubResource( 2 )
animation = "slash"
frame = 4

[connection signal="animation_finished" from="MeleeHitbox/SlashAnimation" to="." method="_on_SlashAnimation_animation_finished"]
